version-23.2/reference/rpk/rpk-group/rpk-group-seek.mdx
---
title: rpk group seek
rpk_version: v23.2.1
---

<head>
  <meta name="title" content="rpk group seek | Redpanda Docs" />
  <meta name="description" content="rpk group seek" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-group/rpk-group-seek/" />
</head>

Modify a group's current offsets.

This command allows you to modify a group's offsets. Sometimes, you may need to
rewind a group if you had a mistaken deploy, or fast-forward a group if it is
falling behind on messages that can be skipped.

The `--to` option allows you to seek to the start of partitions, end of
partitions, or after a specific timestamp. The default is to seek any topic
previously committed. Using `--topics` allows to you set commits for only the
specified topics; all other commits will remain untouched. Topics with no
commits will not be committed unless allowed with `--allow-new-topics`.

The `--to-group` option allows you to seek to commits that are in another group.
This is a merging operation: if g1 is consuming topics A and B, and g2 is
consuming only topic B, `rpk group seek g1 --to-group g2` will update g1's
commits for topic B only. The `--topics` flag can be used to further narrow which
topics are updated. Unlike `--to`, all non-filtered topics are committed, even
topics not yet being consumed, meaning `--allow-new-topics` is not needed.

The `--to-file` option allows to seek to offsets specified in a text file with
the following format:

```
[TOPIC] [PARTITION] [OFFSET]
[TOPIC] [PARTITION] [OFFSET]
```

Each line contains the topic, the partition, and the offset to seek to. As with
the prior options, `--topics` allows filtering which topics are updated. Similar
to `--to-group`, all non-filtered topics are committed, even topics not yet being
consumed, meaning --allow-new-topics is not needed.

The `--to`, `--to-group`, and `--to-file` options are mutually exclusive. If you are
not authorized to describe or read some topics used in a group, you will not be
able to modify offsets for those topics.

### Examples

Seek group G to June 1st, 2021:

```
rpk group seek g --to 1622505600
```

or

```
rpk group seek g --to 1622505600000
```

or

```
rpk group seek g --to 1622505600000000000

```

Seek group X to the commits of group Y topic foo:

```
rpk group seek X --to-group Y --topics foo
```

Seek group G's topics foo, bar, and biz to the end:

```
rpk group seek G --to end --topics foo,bar,biz
```

Seek group G to the beginning of a topic it was not previously consuming:

```
rpk group seek G --to start --topics foo --allow-new-topics
```

## Usage

```bash
rpk group seek [GROUP] --to (start|end|timestamp) --to-group ... --topics ... [flags]
```

## Flags

<!--
[cols=",,",]
|===
|*Value* |*Type* |*Description*

|--allow-new-topics |- |Allow seeking to new topics not currently
consumed (implied with --to-group or --to-file).

|-h, --help |- |Help for seek.

|--to |string |Where to seek (start, end, unix second \| millisecond \|
nanosecond).

|--to-file |string |Seek to offsets as specified in the file.

|--to-group |string |Seek to the commits of another group.

|--topics |strings |Only seek these topics, if any are specified.

|--config |string |Redpanda or rpk config file; default search paths are
~/.config/rpk/rpk.yaml, $PWD, and /etc/redpanda/`redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X
help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===

-->
